# workshop-embodied

./: .gitignore  .gitmodules  README.md  pyproject.toml  workshop_4.ipynb  workshop_4.md
.claude/: settings.json
archive/: demo_c_prev.md
demo_a/: README.md  analyze_gait.py  fetch_run.py  render.py  render_deciles.py  render_fetch.py  render_go1.py  train.py  train_fetch.py  train_go1.py
demo_a_archive/: train_go1.py
demo_b/: README.md  __init__.py  calibrate_coltrane.py  constants.py  dataset.py  drive.py  evaluate.py  export_jax.py  features.py  foot_metrics.py  geometry.py  make_assets.py  marker_bridge.py  models.py  promote_coltrane.py  rerender.py  rollout.py  speed_sweep.py  splits.py  strict_locomotion.py  train_full_prior.py  train_phase1.py  train_phase2.py  waypoint.py
demo_b_archive/: README.md  waypoint.py
demo_c/: README.md  __init__.py  calibrate_bridge.py  compare.py  config.py  deploy_physics.py  dream_env.py  motor.py  neural_data.py  neural_eval.py  policy.py  prepare_neural.py  train.py  train_world.py  validate_world.py
demo_d/: README.md  __init__.py  config.py  env.py  evaluate.py  metrics.py  plot_learning.py  provenance.py  reference.py  render.py  runtime.py  train.py  waypoint.py
demo_e/: README.md  __init__.py  config.py  env.py  evaluate.py  features.py  prior.py  provenance.py  render.py  runtime.py  train.py
demo_f/: README.md  __init__.py  api.py  artifacts.py  commands.py  config.py  evaluate.py  export_jax.py  features.py  generate.py  jax_features.py  jax_models.py  kinematics.py  losses.py  metrics.py  models.py  (+5 more)
(+235 files in other folders)
